# SpeechToText

./: Dockerfile  Home.py  README.md  main.py  package.txt  private_keys.py  pyproject.toml  requirements.txt
pages/: 1_Batch_Data.py  2_Streaming_Data.py
utilities/: get_transcripts.py  play_audio.py  plot_graphs.py  record_audio.py
