[tool.poetry]
name = "speechtotext"
version = "0.1.0"
description = "It helps you to generate transcripts for your audio"
authors = ["RupeshKeesaram <keesaram.rupesh@in.xformics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"
pyaudio = "^0.2.14"
assemblyai = "^0.20.2"
wave = "^0.0.2"
streamlit-extras = "^0.3.6"
matplotlib = "^3.8.2"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
